objects/ProductLoginContactAssociation__c.object
<CustomObject>
    <description>SFDC1-7972 This object links the Product Login to the related contact</description>
    <fields>
        <fullName>Contact__c</fullName>
        <description>SFDC1-4386 Contact related to this Product Login</description>
        <inlineHelpText>Link the related Contact to this Product Login</inlineHelpText>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Product Login Contact Associations</relationshipLabel>
        <relationshipName>ProductLoginContactAssociations</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ProductLogin__c</fullName>
        <description>SFDC1-4386 Product Login related to this Contact</description>
        <inlineHelpText>Link the related to Product Login to this Contact</inlineHelpText>
        <label>Product Login</label>
        <referenceTo>ProductLogin__c</referenceTo>
        <relationshipLabel>Product Login Contact Associations</relationshipLabel>
        <relationshipName>ProductLoginContactAssociations1</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>UniqueProductContactId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>SFDC1-10703: Id to Store Product +  Contact Id so that there are no duplicates</description>
        <inlineHelpText>Id to Store Product +  Contact Id so that there are no duplicates</inlineHelpText>
        <label>Unique Product Contact Id</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Product Login Contact Association</label>
    <nameField>
        <displayFormat>PLContact-{000000}</displayFormat>
        <label>Product Login Contact Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Login Contact Associations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>